--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Desafio API Lemobs",
   "keywords": [],
-  "author": "Marcelle Panzariello",
+  "author": "Renan Fernandes",
   "license": "UNLICENSED",
   "main": "app.js",
   "dependencies": {
