--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "UNLICENSED",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^6.0.0",
     "express": "^4.16.4",
